cmake_minimum_required(VERSION 3.22)

project(DistorcaoDelax VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ─────────────────────────────────────────────
#  Point this to your JUCE installation folder
# ─────────────────────────────────────────────
set(JUCE_PATH "C:/JUCE" CACHE PATH "Path to JUCE root directory")

add_subdirectory(${JUCE_PATH} ${CMAKE_BINARY_DIR}/JUCE)

juce_add_plugin(DistorcaoDelax
    COMPANY_NAME                "Apolo Oliver"
    PLUGIN_MANUFACTURER_CODE    "AplO"
    PLUGIN_CODE                 "DdTe"
    FORMATS                     VST3
    PRODUCT_NAME                "Distorcao Delax Tribal Edition"
    IS_SYNTH                    FALSE
    NEEDS_MIDI_INPUT            FALSE
    NEEDS_MIDI_OUTPUT           FALSE
    IS_MIDI_EFFECT              FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    VST3_CATEGORIES             "Fx|Distortion"
    COPY_PLUGIN_AFTER_BUILD     FALSE
)

target_sources(DistorcaoDelax
    PRIVATE
        Source/PluginProcessor.cpp
        Source/PluginEditor.cpp
)

target_compile_definitions(DistorcaoDelax
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_DISPLAY_SPLASH_SCREEN=0
)

target_link_libraries(DistorcaoDelax
    PRIVATE
        juce::juce_audio_utils
        juce::juce_audio_processors
        juce::juce_dsp
        juce::juce_graphics
        juce::juce_gui_basics
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags
)
